# Geant4_Learning

./: #main.cc#  .gitignore  1_G4RunManagerG4UImanager.cc  README.md  main.cc
code/2.1/: 2_G4UIterminal.cc  3_G4coutG4cerr.cc
code/2.10/: 1_ExecuteaProgram.cc  2_‘Hard-coded’Batch.cc  3_BatchModewithMacroFile.cc  4_CommandLines.cc  5_GeneralCase.cc
code/2.2/: #5_PlaceaVolume.cc#  1_BasicConcepts.cc  2_CreateaSimpleVolume.cc  3_ChooseaSoild.cc  4_CreateaLogicalVolume.cc  5_PlaceaVolume.cc  6_CreateaPhysicalVolume.cc  7_CoordinateSystemsAndRotations.cc
code/2.3/: 1_SpecifyDetectorMaterials.cc  1_SpecifyDetectorMaterials.cc~  2_DefineaSimpleMaterial.cc  3_DefineaMolecule.cc  4_DefineaMixtureByFractionalMass.cc  5_DefineMaterialFromGeant4MaterialDatabase.cc  6_DefineaMaterialFromBaseMaterial.cc  7_PrintMaterialInformation.cc  8_AccessGeant4MaterialDatabase.cc
code/2.4/: 1_SpecifyParticles.cc  1_Specify_Particles.cc  2_RangeCuts.cc
code/2.5/: 1_PhysicalProcesses.cc  1_SpecifyPhysicalProcesses.cc  2_ManagerProcesses.cc  3_SpecifyPhysicalProcesses.cc
code/2.6/: 1_GeneratingPrimaryEvents.cc  2_G4VPrimaryGenerator.cc
code/2.7/: 1_GeneralParticleSource.cc  2_ConfigurationGPS.cc  3_MacroCommands.cc  4_ExampleMacroFile.cc
code/2.8/: 1_MakeExecutableProgram.cc  2_UseofGeant4Config.cmakewithfind_packageinCMake.cc
code/2.9/: 1_SetUpanInteractiveSession.cc  2_AvailableInterfaces.cc  3_SelectInterface.cc
example/B1/: CMakeLists.txt  exampleB1.cc  run1.mac  run2.mac
example/B1/include/: B1ActionInitialization.hh  B1DetectorConstruction.hh  B1PrimaryGeneratorAction.hh  B1RunAction.hh
example/B1/src/: B1ActionInitialization.cc  B1DetectorConstruction.cc  B1PrimaryGeneratorAction.cc  B1RunAction.cc
example/Ex01/: CMakeLists.txt  Ex01.cpp
example/Ex01/include/: DetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh
example/Ex01/src/: DetectorConstruction.cpp  PhysicsList.cpp  PrimaryGeneratorAction.cpp
example/Ex02/: CMakeLists.txt  Ex02.cpp
example/Ex02/include/: DetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh
example/Ex02/src/: DetectorConstruction.cpp  PhysicsList.cpp  PrimaryGeneratorAction.cpp
